# web_sockets

./: pyproject.toml
app/: __init__.py  duplex.py  dynamic.py  manager.py  push.py  static.py
static/: duplex.py  dynamic.py  polling.py  push.py
templates/: base.html  duplex.html  dynamic.html  polling.html  push.html  static.html
